feat: add the detail for product

--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,47 +1,217 @@
-.productCard__detail {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,200&display=swap');
+:root{
+  --verde:#0c443a;
+  --limon:#25d1b2;
+  --degradado: linear-gradient(90deg, var(--limon), var(--verde));
+}
+
+
+*{
+  box-sizing: border-box;
+  font-family: poppins, sans-serif;
+}
+
+
+.productCard {
+  
   width: 350px;
   height: 350px;
   background-color: #FFFFFF;
   border-radius: 10px;
-  border: 3px solid #0c443a;
+  border: 3px solid var(--verde);
   margin: 10px;
-  
-  
-  
- 
-}
-
-
-.productCard__detail img {
-  max-width: 225px;
-  max-height: 200px;
-  min-width: 225px;
-  min-height: 200px;
   display: flex;
-  margin: 20px auto;
- 
+  flex-direction: column; 
 }
 
-.productCard__detail h3 {
+
+.productCard__detail {
+  height: 70%;
+  width: 70%;
+  object-fit: contain;
+  margin: auto;
+  
+}
+
+.productCard__detail__img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+
+
+.productCard h3 {
+  font-size: 13px;
   text-align: center;
-  font-size: 15px;
+  text-decoration: none;
 }
 
-.productCard__detail h2{
-  background-color: #25d1b2;
+.productCard__detail__buttom h2 {
+  width: 50px;
+  background-color: var(--limon);
   border: none;
   color: #0c443a;
   padding: 2px 5px;
-  display: inline-block;
-  font-size: 13px;
+  font-size: 14px;
   cursor: pointer;
   border-radius: 5px;
-  margin: 5px 0 0 5px; 
-  text-decoration: none;
+  margin:   15px; 
   font-weight: normal;
+  
 }
 
-.productCard__detail h2:hover{
-  background-color: #0c443a;
-  color: #25d1b2;
+.productCard__detail__buttom h2:hover{
+  background-color: var(--verde);
+  color: var(--limon);
 }
+
+li{
+  list-style:none;
+}
+
+.listProducts{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+
+
+/* Detail Product */
+
+.product{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: space-between;
+  padding: 10px;
+  
+}
+
+.product__container{
+
+  width: 40%;
+  height: 200px;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  border: 3px solid var(--limon);
+
+
+}
+
+.product__container__img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  padding: 10px 10px;
+}
+
+.product__container__title {
+  font-size: 12px;
+  font-weight: bold;
+  text-align: left;
+  padding: 10px 10px;
+  color: var(--verde);
+}
+
+.product__container__description {
+  font-size: 11px;
+  text-align: left;
+  padding: 10px 10px;
+  color: var(--verde);
+}
+
+.product__container__price {
+  font-size: 15px;
+  text-align: center;
+  padding: 10px 10px;
+  color: var(--limon);
+  text-decoration-line: underline;
+}
+
+.product__container__category {
+  font-size: 13px;
+  text-align: center;
+  padding: 10px 10px;
+  color: var(--verde);
+}
+
+.product__containerb{
+  width: 60%;
+
+}
+
+@media screen and (min-width: 768px) {
+
+/* Detail Product */
+
+.product{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: space-between;
+  padding: 25px;
+  
+}
+
+.product__container{
+
+  width: 40%;
+  height: 400px;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  border: 3px solid var(--limon);
+
+
+}
+
+.product__container__img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  padding: 15px 15px;
+}
+
+.product__container__title {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: left;
+  padding: 15px 15px;
+  color: var(--verde);
+}
+
+.product__container__description {
+  font-size: 20px;
+  text-align: left;
+  padding: 15px 15px;
+  color: var(--verde);
+}
+
+.product__container__price {
+  font-size: 30px;
+  text-align: center;
+  padding: 15px 15px;
+  color: var(--limon);
+  text-decoration-line: underline;
+}
+
+.product__container__category {
+  font-size: 30px;
+  text-align: center;
+  padding: 15px 15px;
+  color: var(--verde);
+}
+
+.product__containerb{
+  width: 60%;
+
+}
+}
+
+
+
+
+
