--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -26,8 +26,8 @@
 
 
 .productCard__detail {
-  height: 70%;
-  width: 70%;
+  height: 65%;
+  width: 65%;
   object-fit: contain;
   margin: auto;
   
@@ -47,12 +47,11 @@
   text-decoration: none;
 }
 
-.productCard__detail__buttom h2 {
-  width: 50px;
+.productCard__detail__buttom button {
   background-color: var(--limon);
   border: none;
   color: #0c443a;
-  padding: 2px 5px;
+  padding: 2px 7px;
   font-size: 14px;
   cursor: pointer;
   border-radius: 5px;
@@ -61,7 +60,7 @@
   
 }
 
-.productCard__detail__buttom h2:hover{
+.productCard__detail__buttom button:hover{
   background-color: var(--verde);
   color: var(--limon);
 }
@@ -73,7 +72,7 @@ li{
 .listProducts{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 
@@ -84,16 +83,16 @@ li{
   width: 100%;
   height: 100%;
   display: flex;
-  flex-wrap: nowrap;
-  align-items: space-between;
+  flex-direction: column;
+  align-items: center;
   padding: 10px;
   
 }
 
 .product__container{
 
-  width: 40%;
-  height: 200px;
+  width: 70%;
+  height: 300px;
   background-color: #FFFFFF;
   border-radius: 10px;
   border: 3px solid var(--limon);
@@ -109,17 +108,17 @@ li{
 }
 
 .product__container__title {
-  font-size: 12px;
+  font-size: 15px;
   font-weight: bold;
-  text-align: left;
-  padding: 10px 10px;
+  text-align: center;
+  padding: 10px 5px;
   color: var(--verde);
 }
 
 .product__container__description {
-  font-size: 11px;
-  text-align: left;
-  padding: 10px 10px;
+  font-size: 13px;
+  text-align: justify;
+  padding: 10px 5px;
   color: var(--verde);
 }
 
@@ -132,7 +131,7 @@ li{
 }
 
 .product__container__category {
-  font-size: 13px;
+  font-size: 15px;
   text-align: center;
   padding: 10px 10px;
   color: var(--verde);
@@ -151,7 +150,7 @@ li{
   width: 100%;
   height: 100%;
   display: flex;
-  flex-wrap: nowrap;
+  flex-direction: row;
   align-items: space-between;
   padding: 25px;
   
@@ -207,7 +206,6 @@ li{
 
 .product__containerb{
   width: 60%;
-
 }
 }
 
