--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import './styles/about.css';
+@import './styles/home.css';
+@import './styles/navbar.css';
+@import './styles/noFound.css';
+@import './styles/product.css';
+@import './styles/footer.css';
+
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
