--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -13,7 +13,7 @@
     text-decoration: none;
     outline: none;
     border: none;
-    text-transform: capitalize;
+    text-transform: none;
 }
 
 *::selection{
@@ -60,6 +60,7 @@ header .navbar a{
 
 header .navbar a:hover{
     color: var(--limon);
+    transition: .3s;
 }
 
 header input{
