feat/add info to about

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -39,11 +39,13 @@
 .profile__info__name{
   display: flex;
   justify-content: center;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   font-weight: bold;
-  color:var(--verde);
+  color:var(--limon);
   font-weight: 500;
   background-color: #f9f9f9;
+  text-decoration: underline;
+  border-radius: 5px;
 }
 
 .profile__info__description{
@@ -64,9 +66,10 @@
 
 .profile__info__listTitle{
   text-align: center;
-  color: var(--verde);
+  color: var(--limon);
   font-weight: 500;
   font-size: 1.3rem;
+  text-decoration: underline;
 }
 
 .profile__info__correo{
@@ -85,6 +88,12 @@
   color: var(--verde);
   font-weight: 500;
   background-color: #f9f9f9;
+  border-radius: 5px;
+}
+
+.profile__info__contact:hover{
+  transition: .3s;
+  transform: scale(1.1);
 }
 
 
@@ -102,11 +111,12 @@
   .profile__img{
     display: flex;
     justify-content: center;
+    
   }
   
   .profile__img img {
     height: auto;
-    width: 100%;  
+    width: 75%;  
     border-radius: 82% 18% 49% 51% / 44% 46% 54% 56% ; 
     border: 2px solid var(--limon);
     margin: auto;
@@ -114,6 +124,7 @@
 
   .profile__info{
     padding: 10px 30px;
+    width: 65%;
   }
   
   .profile__info__name{
@@ -121,14 +132,15 @@
     justify-content: center;
     font-size: 2.5rem;
     font-weight: bold;
-    color:var(--verde);
+    color:var(--limon);
     font-weight: 500;
      background-color: #f9f9f9;
+     text-decoration: underline;
   }
   
   .profile__info__description{
     text-align: justify;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     color: var(--verde);
     font-weight: 500;
     padding: 10px;
@@ -136,24 +148,25 @@
   
   .profile__info__list{
     padding: 10px;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     color: var(--verde);
     font-weight: 500;
+    
   }
   
   
   .profile__info__listTitle{
     text-align: center;
-    color: var(--verde);
+    color:var(--limon);
     font-weight: 500;
-    font-size: 1.3rem;
+    font-size: 2.1rem;
+    text-decoration: underline;
+    
   }
   
   .profile__info__correo{
     display: flex;
     justify-content: center;
-    font-size: 1.2rem;
-    color: var(--verde);
     font-weight: 500;
   }
   
@@ -161,7 +174,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     color: var(--verde);
     font-weight: 500;
     background-color: #f9f9f9;
